<resources>
    <string name="app_name">LOG日志</string>
    <string name="username">用户名</string>
    <string name="password">用户名</string>
    <string name="Login">登录</string>
    <string name="add">添加</string>
    <string name="update">修改</string>
    <string name="remove">删除</string>
    <string name="query">搜索</string>
    <string name="save">保存</string>
    <string name="title">标题</string>
    <string name="context">内容</string>
    <string name="updatepsw">修改密码</string>
</resources>
